@@ -10,10 +10,12 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
+    private static final String MANDOR_ASSIGNED_TO_BURUH_MESSAGE =
+            "We cant delete that users as its been assigned to a Buruh";
+
     private final UserRepository userRepository;
 
     public UserServiceImpl(UserRepository userRepository) {
@@ -25,7 +27,7 @@ public class UserServiceImpl implements UserService {
         List<User> users = userRepository.findAll();
         return users.stream()
                 .map(UserDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -47,12 +49,18 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public Optional<UserDto> deleteUserById(Long id) {
-        Optional<User> userOpt = userRepository.findById(id);
-        Optional<UserDto> dtoOpt = userOpt.map(UserDto::new);
-        if (dtoOpt.isPresent()) {
+        return userRepository.findById(id).map(user -> {
+            rejectDeletingAssignedMandor(user);
             userRepository.deleteById(id);
+            return new UserDto(user);
+        });
+    }
+
+    private void rejectDeletingAssignedMandor(User user) {
+        if (user.getRole() == Role.MANDOR
+                && userRepository.existsByRoleAndMandorUsername(Role.BURUH, user.getUsername())) {
+            throw new IllegalStateException(MANDOR_ASSIGNED_TO_BURUH_MESSAGE);
         }
-        return dtoOpt;
     }
 
     @Override
